--- a/components/Input/Input.module.scss
+++ b/components/Input/Input.module.scss
@@ -21,6 +21,11 @@
   }
 }
 
+.input.readonly {
+  border: none;
+  background-color: #D3D3D3;
+}
+
 .inputEnd {
   position: absolute;
   left: 0.5rem;
