changed roaming countries border color in order modal

--- a/components/Order/OrderModal.module.scss
+++ b/components/Order/OrderModal.module.scss
@@ -163,3 +163,16 @@
     margin-bottom: 1rem;
   }
 }
+
+.roamingCountries {
+  :global .accordion {
+    border: 1px solid #000000;
+  }
+
+  :global .accordion-button::after {
+    background-color: #000000;
+    -webkit-mask-image: url('/plus.svg');
+    mask-image: url('/plus.svg');
+    background-image: none;
+  }
+}
