added bundles scroll

--- a/components/Bundles/Bundles.module.scss
+++ b/components/Bundles/Bundles.module.scss
@@ -18,7 +18,7 @@
 }
 
 .bundlesScroll {
-  overflow-x: scroll;
+  overflow-x: auto;
   overflow-y: hidden;
   white-space: nowrap;
   width: 90vw;
@@ -26,13 +26,36 @@
   text-align: center;
   display: flex;
   align-items: center;
+
+  @media (max-width: map-get($grid-breakpoints, "md")) {
+    height: 6.8rem;
+  }
 }
 
 .bundlesScroll::-webkit-scrollbar {
-  display: none;
+  background-color: map-get($theme-colors, "secondary");
+  height: 0.2rem;
+  border-radius: 5px;
+}
+
+.bundlesScroll::-webkit-scrollbar-thumb {
+  background-color: map-get($theme-colors, "orange");
+  border-radius: 5px;
 }
 
 .bundlesContainer {
   width: 100%;
 }
 
+.arrowButton {
+  background: transparent;
+  border: none;
+
+  &:hover {
+    background: none;
+  }
+
+  :global svg {
+    fill: #ffffff;
+  }
+}
